Cache tier split from the artifact store, SSE vitals, jk repo refresh
- Action outputs live in the cache tier (sha256/ + actions/); long-lived
  dependencies stay in the artifact store, sized by max-store-size-mb
  and max-cache-size-mb.
- The engine pushes change-gated status and cache vitals over SSE and
  the dashboard stops polling while the stream is live.
- jk repo refresh <coordinate> evicts mirror entries so they re-fetch;
  mirror policy is verify-on-mismatch, first-write-wins.
- Loopback path reads are token-gated, secret files are created 0600,
  and Giter8 or JDK tar extraction cannot escape the destination.
- The primary engine reaps superseded AOT caches; GraalVM pin is 25.0.4.

Tickets: JK-1347, JK-1420, JK-1449, JK-1451, JK-1452, JK-1453, JK-1454, JK-1455, JK-1456, JK-1457, JK-1458, JK-1459, JK-1460, JK-1461, JK-1462, JK-1463, JK-1464, JK-1465, JK-1466, JK-1467, JK-1468, JK-1469, JK-1470, JK-1471, JK-1472, JK-1473, JK-1474, JK-1475, JK-1476, JK-1477, JK-1479, JK-1486, JK-1491, JK-1495, JK-1499, JK-1501